# ocaml-conf-numa

./: CHANGES.md  README.md  conf-numa.opam
files/: test.c
