opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://www.github.com/stevebleazard/ocaml-conf-numa"
bug-reports: "https://www.github.com/stevebleazard/ocaml-conf-numa/issues"
license: "MIT"
dev-repo: "https://www.github.com/stevebleazard/ocaml-conf-numa.git"

depexts: [
  [["debian"] ["libnuma-dev"]]
  [["ubuntu"] ["libnuma-dev"]]
  [["centos"] ["numactl-libs" "numactl-devel"]]
  [["fedora"] ["numactl-libs" "numactl-devel"]]
  [["opensuse"] ["libnuma-devel"]]
  [["alpine"] ["numactl-dev"]]
]

build: [
  ["sh" "-exc" "cc -c $CFLAGS -I/usr/local/include files/test.c"]
]

available: [ os != "darwin" & os != "freebsd" & os != "openbsd" ]
